appId: com.android.vending
---
- tapOn: "Options"
- tapOn: "Updates"
- extendedWaitUntil:
    notVisible: "Update"
    timeout: 60000