appId: com.toughra.ustadmobile
---
- tapOn:
      id: "com.toughra.ustadmobile:id/item_clazzlist_clazz_cl"
- tapOn: "MEMBERS"
- tapOn: "Add a teacher"
- tapOn: "Add a new person"
- tapOn: "First names"
- inputText: "Sudha"
- tapOn: "Last name"
- inputText: "Madhav"
- tapOn: "Gender"
- tapOn: "Female"
- tapOn: "SAVE"
- tapOn: "SAVE"
- takeScreenshot: "results/${TESTCOURSENAME}-AddedTeacher"
- tapOn: "Sudha Madhav"
- tapOn: "VIEW PROFILE"
- tapOn: "CREATE ACCOUNT"
- tapOn: "Username"
- inputText: "Sudha"
- tapOn: "New password"
- inputText: "test"
- tapOn: "Confirm password"
- inputText: "test"
- tapOn: "SAVE"
- takeScreenshot: "results/${TESTCOURSENAME}-TeacherAccountCreated"