appId: com.toughra.ustadmobile
---
- launchApp
- tapOn:
    text: "Settings"
- tapOn: "Site"
- tapOn: "Edit"
- tapOn: "Guest login enabled"
- tapOn: "SAVE"
- takeScreenshot: "results/${TESTCONTENTNAME}-Guestloginenabled"


