appId: com.toughra.ustadmobile
---
- tapOn: "EDIT"
- tapOn:
    id: "com.toughra.ustadmobile:id/entry_title_text"
- scroll
- swipe:
      start: 100,400
      end: 100,100
- takeScreenshot: "results/Publiclyaccessible-on"
- tapOn: "Publicly accessible"
- takeScreenshot: "results/Publiclyaccessible-off"
- tapOn: "SAVE"
- back

