appId: com.toughra.ustadmobile
---
- runFlow: "add_content.yaml"
- clearState: com.toughra.ustadmobile
- launchApp
- hideKeyboard
- tapOn: "GET STARTED"
- inputText: ${ENDPOINT}
- hideKeyboard
- tapOn: "NEXT"
- tapOn: "Username"
- inputText: ${USERNAME}
- tapOn: "Password"
- inputText: ${PASSWORD}
- hideKeyboard
- tapOn: "LOGIN"
- tapOn: "Library"
- extendedWaitUntil:
    visible: ${TESTCONTENTNAME}
    timeout: 60000
- tapOn: ${TESTCONTENTNAME}
- tapOn: "Download"
- tapOn: "Download"
- extendedWaitUntil:
    visible: "OPEN"
    timeout: 10000
- tapOn: "OPEN"
- scroll
- takeScreenshot: "results/${TESTCONTENTNAME}"
- back
- tapOn: "ATTEMPTS"
- takeScreenshot: "results/${TESTCONTENTNAME}AttemptsScreen"


