appId: com.toughra.ustadmobile
---
- runFlow: "../common/add_content.yaml"
- back
- takeScreenshot: "results/{TESTCONTENTNAME}screen_beforeHiding"
- longPressOn:
      id: "com.toughra.ustadmobile:id/content_entry_item_title"
- tapOn:
    text: "Hide"
- takeScreenshot: "results/${TESTCONTENTNAME}screen_AfterHiding"
- clearState: com.toughra.ustadmobile
- launchApp
- hideKeyboard
- tapOn: "GET STARTED"
- inputText: ${ENDPOINT}
- hideKeyboard
- tapOn: "NEXT"
- tapOn: "Username"
- inputText: ${USERNAME}
- tapOn: "Password"
- inputText: ${PASSWORD}
- hideKeyboard
- tapOn: "LOGIN"
- tapOn: "Library"
- takeScreenshot: "results/${TESTCONTENTNAME}Screen_OnNewDevice"