appId: com.toughra.ustadmobile
---
- runFlow: "../common/add_content.yaml"
- back
- takeScreenshot: "results/${TESTCONTENTNAME}_beforeMoving"
- longPressOn:
      id: "com.toughra.ustadmobile:id/content_entry_item_title"
- tapOn:
    text: "Move"
- tapOn: "Add new content"
- tapOn: "New folder"
- tapOn:
    id: "com.toughra.ustadmobile:id/entry_title_text"
- inputText: "New Folder"
- tapOn: "SAVE"
- takeScreenshot: "results/${TESTCONTENTNAME}_AfterMoving"
- clearState: com.toughra.ustadmobile
- launchApp
- hideKeyboard
- tapOn: "GET STARTED"
- inputText: ${ENDPOINT}
- hideKeyboard
- tapOn: "NEXT"
- tapOn: "Username"
- inputText: ${USERNAME}
- tapOn: "Password"
- inputText: ${PASSWORD}
- hideKeyboard
- tapOn: "LOGIN"
- tapOn: "Library"
- takeScreenshot: "results/${TESTCONTENTNAME}_AfterMovingContent"