appId: com.toughra.ustadmobile
---
- runFlow: "../common/add_content.yaml"
- tapOn: "DELETE"
- tapOn: "DELETE"
- extendedWaitUntil:
    visible: "DOWNLOAD"
    timeout: 10000
- takeScreenshot: "results/${TESTCONTENTNAME}AfterDeletetion"
- tapOn: "DOWNLOAD"
- tapOn: "DOWNLOAD"
- extendedWaitUntil:
    visible: "Delete"
    timeout: 10000
- tapOn: "OPEN"
- scroll
- takeScreenshot: "results/${TESTCONTENTNAME}contentscreen"