appId: com.toughra.ustadmobile
---
- runFlow: "../common/add_content.yaml"
- tapOn: "EDIT"
- hideKeyboard
- scroll
- swipe:
    start: 100,400
    end: 100,100
- takeScreenshot: "results/Publiclyaccessible-on"
- tapOn: "Publicly accessible"
- takeScreenshot: "results/Publiclyaccessible-off"
- tapOn: "SAVE"
- back
- runFlow: "../common/enable_guest_login.yaml"
- clearState: com.toughra.ustadmobile
- launchApp
- hideKeyboard
- tapOn: "GET STARTED"
- inputText: ${ENDPOINT}
- hideKeyboard
- tapOn: "NEXT"
- tapOn: "Connect as Guest"
- tapOn: "Library"
- takeScreenshot: "results/${TESTCONTENTNAME}_finalresult"

