appId: com.toughra.ustadmobile
---
-  tapOn: "Courses"
- tapOn:
      id: "com.toughra.ustadmobile:id/item_clazzlist_clazz_cl"
- tapOn: "MEMBERS"
- tapOn:
    id: "com.toughra.ustadmobile:id/accept_icon"
- extendedWaitUntil:
    notVisible:
      id: "com.toughra.ustadmobile:id/accept_icon"
    timeout: 10000
- takeScreenshot: "results/StudentGotAdded"