appId: com.toughra.ustadmobile
---
- launchApp
-  tapOn: "Courses"
- tapOn:
      id: "com.toughra.ustadmobile:id/item_clazzlist_clazz_cl"
- tapOn: "MEMBERS"
- tapOn:
    id: "com.toughra.ustadmobile:id/accept_icon"
- takeScreenshot: "results/StudentGotAdded"