appId: com.toughra.ustadmobile
---
- runFlow: "../common/add_course.yaml"
- tapOn: "People"
- tapOn: "Person"
- tapOn: "First names"
- inputText: "Joe"
- tapOn: "Last name"
- inputText: "Evan"
- tapOn: "Gender"
- tapOn: "Male"
- tapOn: "SAVE"
- takeScreenshot: "results/AddedNewStudent"
- tapOn: "CREATE ACCOUNT"
- tapOn: "Username"
- inputText: "joe"
- tapOn: "New password"
- inputText: "test"
- tapOn: "Confirm password"
- inputText: "test"
- tapOn: "SAVE"
- takeScreenshot: "results/NewStudentAccountCreated"
- runFlow: "admin_can_copy_course_code.yaml"
- runFlow: "student_join_using_course_code.yaml"
- runFlow: "../common/admin_can_add_new_teacher.yaml"
- runFlow: "teacher_can_login.yaml"
- runFlow: "accepting_student_request.yaml"


