appId: com.toughra.ustadmobile
---
- clearState: com.toughra.ustadmobile
- launchApp
- hideKeyboard
- tapOn: "GET STARTED"
- inputText: ${ENDPOINT}
- hideKeyboard
- tapOn: "NEXT"
- tapOn: "Username"
- inputText: "joe"
- tapOn: "Password"
- inputText: "test"
- hideKeyboard
- tapOn: "LOGIN"
- tapOn: "COURSE"
- tapOn: "Join existing course"
- tapOn: "Class code"
- longPressOn: "Class code"
- tapOn: "Paste"
- tapOn: "Join Class"
- takeScreenshot: "results/PendingStudent"
