appId: com.toughra.ustadmobile
---
- clearState: com.toughra.ustadmobile
- launchApp
- hideKeyboard
- tapOn: "GET STARTED"
- inputText: ${ENDPOINT}
- hideKeyboard
- tapOn: "NEXT"
- tapOn: "Username"
- inputText: "Sudha"
- tapOn: "Password"
- inputText: "test"
- hideKeyboard
- tapOn: "LOGIN"
- takeScreenshot: "results/TeacherAbleToLogin"
