appId: com.toughra.ustadmobile
---
- clearState: com.toughra.ustadmobile
- launchApp
- hideKeyboard
- tapOn: "GET STARTED"
- inputText: ${ENDPOINT}
- hideKeyboard
- tapOn: "NEXT"
- tapOn: "Username"
- inputText: ${USERNAME}
- tapOn: "Password"
- inputText: ${PASSWORD}
- hideKeyboard
- tapOn: "LOGIN"
- tapOn: "COURSE"
- tapOn: "Add a new course"
- tapOn: "Name"
- inputText: ${COURSENAME}
- hideKeyboard
- tapOn: "SAVE"
- takeScreenshot: "results/${COURSENAME}-overviewscreen"
- back
- takeScreenshot: "results/${COURSENAME}-coursepage"
